[package]
name = "ex_scylla"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "ex_scylla"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29.1"
scylla = "0.9"
once_cell = "^1.9"
tokio = { version = "^1.17", features = ["full"] }
futures = "^0.3"
uuid = "^1.0"
bigdecimal = "^0.2"
chrono = "0.4.0"
num-bigint = "^0.3"
tracing = "^0.1"
tracing-subscriber = "^0.3"
